[BE/FEATURE] User 동기화 코드 추가 및 repoController 수정